# fmo-android

./: .gitignore  .gitmodules  README  README.md  build.gradle  local.properties  runTestsOnEmulator.sh
.circleci/: config.yml
.github/workflows/: gradle.yml  gradle_sonar.yml
OpenCV-android-sdk/samples/: example-15-puzzle.apk  example-camera-calibration.apk  example-color-blob-detection.apk  example-face-detection.apk  example-image-manipulations.apk  example-tutorial-1-camerapreview.apk  example-tutorial-2-mixedprocessing.apk  example-tutorial-3-cameracontrol.apk
OpenCV-android-sdk/sdk/java/: .project  AndroidManifest.xml
OpenCV-android-sdk/sdk/java/javadoc/: allclasses-frame.html  index.html  (+8 more)
app/: build.gradle  local.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  assert.cpp  assert.hpp  cz_fmo_Lib.h  java_classes.cpp  java_classes.hpp  java_interface.cpp  java_interface.hpp  main.cpp  ocvrec.cpp  ocvrec.hpp  ocvrec2.cpp  recording2.cpp  stats.cpp  stats.hpp  test1.cpp
fmo-cpp/desktop/: args.cpp  args.hpp  loop-main.cpp  loop-process.cpp  loop-visualizer.cpp  loop.hpp  objectset.cpp  report-evaluation.cpp  video.hpp  window.cpp  window.hpp
fmo-cpp/fmo/: CMakeLists.txt  algorithm.cpp  assert.cpp  image-util.cpp  image-util.hpp  include-opencv.hpp  processing-basic.cpp  stats.cpp
fmo-cpp/fmo/median-v1/: objects-match.cpp
fmo-cpp/include/fmo/: algorithm.hpp  assert.hpp  common.hpp  processing.hpp  stats.hpp
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/src/main/: AndroidManifest.xml
(+388 files in other folders)
